output/cpp/scanner/grammars/ScannerParser.cpp

// Generated from grammars/Scanner.g4 by ANTLR 4.13.1


#include "ScannerListener.h"

#include "ScannerParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct ScannerParserStaticData final {
  ScannerParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  ScannerParserStaticData(const ScannerParserStaticData&) = delete;
  ScannerParserStaticData(ScannerParserStaticData&&) = delete;
  ScannerParserStaticData& operator=(const ScannerParserStaticData&) = delete;
  ScannerParserStaticData& operator=(ScannerParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag scannerParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
ScannerParserStaticData *scannerParserStaticData = nullptr;

void scannerParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (scannerParserStaticData != nullptr) {
    return;
  }
#else
  assert(scannerParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<ScannerParserStaticData>(
    std::vector<std::string>{
      "document", "codeBlock", "chtlBlock", "chtlElement", "elementStart", 
      "elementEnd", "elementContent", "chtlAttribute", "chtlDeclaration", 
      "chtlStatement", "textBlock", "textContent"
    },
    std::vector<std::string>{
      "", "'{'", "'}'", "';'", "'text'", "'style'", "'script'", "'[Template]'", 
      "'[Custom]'", "'[Configuration]'", "'[Namespace]'", "'[Import]'", 
      "'[Origin]'"
    },
    std::vector<std::string>{
      "", "", "", "", "TEXT", "STYLE", "SCRIPT", "TEMPLATE_START", "CUSTOM_START", 
      "CONFIG_START", "NAMESPACE_START", "IMPORT_START", "ORIGIN_START", 
      "COLON_OR_EQUAL", "IDENTIFIER", "STRING_LITERAL", "UNQUOTED_LITERAL", 
      "ATTR_VALUE", "ANY_CONTENT", "WS", "COMMENT", "MULTI_COMMENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  scannerParserStaticData = staticData.release();
}

}

ScannerParser::ScannerParser(TokenStream *input) : ScannerParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

ScannerParser::ScannerParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  ScannerParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *scannerParserStaticData->atn, scannerParserStaticData->decisionToDFA, scannerParserStaticData->sharedContextCache, options);
}

ScannerParser::~ScannerParser() {
  delete _interpreter;
}

const atn::ATN& ScannerParser::getATN() const {
  return *scannerParserStaticData->atn;
}

std::string ScannerParser::getGrammarFileName() const {
  return "Scanner.g4";
}

const std::vector<std::string>& ScannerParser::getRuleNames() const {
  return scannerParserStaticData->ruleNames;
}

const dfa::Vocabulary& ScannerParser::getVocabulary() const {
  return scannerParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView ScannerParser::getSerializedATN() const {
  return scannerParserStaticData->serializedATN;
}


//----------------- DocumentContext ------------------------------------------------------------------

ScannerParser::DocumentContext::DocumentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ScannerParser::DocumentContext::EOF() {
  return getToken(ScannerParser::EOF, 0);
}

std::vector<ScannerParser::CodeBlockContext *> ScannerParser::DocumentContext::codeBlock() {
  return getRuleContexts<ScannerParser::CodeBlockContext>();
}

ScannerParser::CodeBlockContext* ScannerParser::DocumentContext::codeBlock(size_t i) {
  return getRuleContext<ScannerParser::CodeBlockContext>(i);
}


size_t ScannerParser::DocumentContext::getRuleIndex() const {
  return ScannerParser::RuleDocument;
}

void ScannerParser::DocumentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ScannerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDocument(this);
}

void ScannerParser::DocumentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ScannerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDocument(this);
}

ScannerParser::DocumentContext* ScannerParser::document() {
  DocumentContext *_localctx = _tracker.createInstance<DocumentContext>(_ctx, getState());
  enterRule(_localctx, 0, ScannerParser::RuleDocument);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(27);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 385008) != 0)) {
      setState(24);
      codeBlock();
      setState(29);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(30);
    match(ScannerParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CodeBlockContext ------------------------------------------------------------------

ScannerParser::CodeBlockContext::CodeBlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ScannerParser::ChtlBlockContext* ScannerParser::CodeBlockContext::chtlBlock() {
  return getRuleContext<ScannerParser::ChtlBlockContext>(0);
}

ScannerParser::TextBlockContext* ScannerParser::CodeBlockContext::textBlock() {
  return getRuleContext<ScannerParser::TextBlockContext>(0);
}


size_t ScannerParser::CodeBlockContext::getRuleIndex() const {
  return ScannerParser::RuleCodeBlock;
}

void ScannerParser::CodeBlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ScannerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCodeBlock(this);
}

void ScannerParser::CodeBlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ScannerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCodeBlock(this);
}

ScannerParser::CodeBlockContext* ScannerParser::codeBlock() {
  CodeBlockContext *_localctx = _tracker.createInstance<CodeBlockContext>(_ctx, getState());
  enterRule(_localctx, 2, ScannerParser::RuleCodeBlock);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(34);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ScannerParser::TEXT:
      case ScannerParser::STYLE:
      case ScannerParser::SCRIPT:
      case ScannerParser::TEMPLATE_START:
      case ScannerParser::CUSTOM_START:
      case ScannerParser::CONFIG_START:
      case ScannerParser::NAMESPACE_START:
      case ScannerParser::IMPORT_START:
      case ScannerParser::ORIGIN_START:
      case ScannerParser::IDENTIFIER: {
        enterOuterAlt(_localctx, 1);
        setState(32);
        chtlBlock();
        break;
      }

      case ScannerParser::STRING_LITERAL:
      case ScannerParser::UNQUOTED_LITERAL:
      case ScannerParser::ANY_CONTENT: {
        enterOuterAlt(_localctx, 2);
        setState(33);
        textBlock();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ChtlBlockContext ------------------------------------------------------------------

ScannerParser::ChtlBlockContext::ChtlBlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ScannerParser::ChtlElementContext* ScannerParser::ChtlBlockContext::chtlElement() {
  return getRuleContext<ScannerParser::ChtlElementContext>(0);
}

ScannerParser::ChtlDeclarationContext* ScannerParser::ChtlBlockContext::chtlDeclaration() {
  return getRuleContext<ScannerParser::ChtlDeclarationContext>(0);
}

ScannerParser::ChtlStatementContext* ScannerParser::ChtlBlockContext::chtlStatement() {
  return getRuleContext<ScannerParser::ChtlStatementContext>(0);
}


size_t ScannerParser::ChtlBlockContext::getRuleIndex() const {
  return ScannerParser::RuleChtlBlock;
}

void ScannerParser::ChtlBlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ScannerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterChtlBlock(this);
}

void ScannerParser::ChtlBlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ScannerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitChtlBlock(this);
}

ScannerParser::ChtlBlockContext* ScannerParser::chtlBlock() {
  ChtlBlockContext *_localctx = _tracker.createInstance<ChtlBlockContext>(_ctx, getState());
  enterRule(_localctx, 4, ScannerParser::RuleChtlBlock);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(39);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ScannerParser::TEXT:
      case ScannerParser::STYLE:
      case ScannerParser::SCRIPT:
      case ScannerParser::IDENTIFIER: {
        enterOuterAlt(_localctx, 1);
        setState(36);
        chtlElement();
        break;
      }

      case ScannerParser::TEMPLATE_START:
      case ScannerParser::CUSTOM_START:
      case ScannerParser::CONFIG_START:
      case ScannerParser::NAMESPACE_START: {
        enterOuterAlt(_localctx, 2);
        setState(37);
        chtlDeclaration();
        break;
      }

      case ScannerParser::IMPORT_START:
      case ScannerParser::ORIGIN_START: {
        enterOuterAlt(_localctx, 3);
        setState(38);
        chtlStatement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ChtlElementContext ------------------------------------------------------------------

ScannerParser::ChtlElementContext::ChtlElementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ScannerParser::ElementStartContext* ScannerParser::ChtlElementContext::elementStart() {
  return getRuleContext<ScannerParser::ElementStartContext>(0);
}

ScannerParser::ElementEndContext* ScannerParser::ChtlElementContext::elementEnd() {
  return getRuleContext<ScannerParser::ElementEndContext>(0);
}

std::vector<ScannerParser::ElementContentContext *> ScannerParser::ChtlElementContext::elementContent() {
  return getRuleContexts<ScannerParser::ElementContentContext>();
}

ScannerParser::ElementContentContext* ScannerParser::ChtlElementContext::elementContent(size_t i) {
  return getRuleContext<ScannerParser::ElementContentContext>(i);
}


size_t ScannerParser::ChtlElementContext::getRuleIndex() const {
  return ScannerParser::RuleChtlElement;
}

void ScannerParser::ChtlElementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ScannerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterChtlElement(this);
}

void ScannerParser::ChtlElementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ScannerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitChtlElement(this);
}

ScannerParser::ChtlElementContext* ScannerParser::chtlElement() {
  ChtlElementContext *_localctx = _tracker.createInstance<ChtlElementContext>(_ctx, getState());
  enterRule(_localctx, 6, ScannerParser::RuleChtlElement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(41);
    elementStart();
    setState(45);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 376944) != 0)) {
      setState(42);
      elementContent();
      setState(47);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(48);
    elementEnd();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ElementStartContext ------------------------------------------------------------------

ScannerParser::ElementStartContext::ElementStartContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ScannerParser::ElementStartContext::IDENTIFIER() {
  return getToken(ScannerParser::IDENTIFIER, 0);
}

tree::TerminalNode* ScannerParser::ElementStartContext::TEXT() {
  return getToken(ScannerParser::TEXT, 0);
}

tree::TerminalNode* ScannerParser::ElementStartContext::STYLE() {
  return getToken(ScannerParser::STYLE, 0);
}

tree::TerminalNode* ScannerParser::ElementStartContext::SCRIPT() {
  return getToken(ScannerParser::SCRIPT, 0);
}


size_t ScannerParser::ElementStartContext::getRuleIndex() const {
  return ScannerParser::RuleElementStart;
}

void ScannerParser::ElementStartContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ScannerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterElementStart(this);
}

void ScannerParser::ElementStartContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ScannerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitElementStart(this);
}

ScannerParser::ElementStartContext* ScannerParser::elementStart() {
  ElementStartContext *_localctx = _tracker.createInstance<ElementStartContext>(_ctx, getState());
  enterRule(_localctx, 8, ScannerParser::RuleElementStart);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(58);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ScannerParser::IDENTIFIER: {
        enterOuterAlt(_localctx, 1);
        setState(50);
        match(ScannerParser::IDENTIFIER);
        setState(51);
        match(ScannerParser::T__0);
        break;
      }

      case ScannerParser::TEXT: {
        enterOuterAlt(_localctx, 2);
        setState(52);
        match(ScannerParser::TEXT);
        setState(53);
        match(ScannerParser::T__0);
        break;
      }

      case ScannerParser::STYLE: {
        enterOuterAlt(_localctx, 3);
        setState(54);
        match(ScannerParser::STYLE);
        setState(55);
        match(ScannerParser::T__0);
        break;
      }

      case ScannerParser::SCRIPT: {
        enterOuterAlt(_localctx, 4);
        setState(56);
        match(ScannerParser::SCRIPT);
        setState(57);
        match(ScannerParser::T__0);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ElementEndContext ------------------------------------------------------------------

ScannerParser::ElementEndContext::ElementEndContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ScannerParser::ElementEndContext::getRuleIndex() const {
  return ScannerParser::RuleElementEnd;
}

void ScannerParser::ElementEndContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ScannerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterElementEnd(this);
}

void ScannerParser::ElementEndContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ScannerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitElementEnd(this);
}

ScannerParser::ElementEndContext* ScannerParser::elementEnd() {
  ElementEndContext *_localctx = _tracker.createInstance<ElementEndContext>(_ctx, getState());
  enterRule(_localctx, 10, ScannerParser::RuleElementEnd);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(60);
    match(ScannerParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ElementContentContext ------------------------------------------------------------------

ScannerParser::ElementContentContext::ElementContentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ScannerParser::ChtlAttributeContext* ScannerParser::ElementContentContext::chtlAttribute() {
  return getRuleContext<ScannerParser::ChtlAttributeContext>(0);
}

ScannerParser::ChtlElementContext* ScannerParser::ElementContentContext::chtlElement() {
  return getRuleContext<ScannerParser::ChtlElementContext>(0);
}

ScannerParser::TextContentContext* ScannerParser::ElementContentContext::textContent() {
  return getRuleContext<ScannerParser::TextContentContext>(0);
}

tree::TerminalNode* ScannerParser::ElementContentContext::ANY_CONTENT() {
  return getToken(ScannerParser::ANY_CONTENT, 0);
}


size_t ScannerParser::ElementContentContext::getRuleIndex() const {
  return ScannerParser::RuleElementContent;
}

void ScannerParser::ElementContentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ScannerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterElementContent(this);
}

void ScannerParser::ElementContentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ScannerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitElementContent(this);
}

ScannerParser::ElementContentContext* ScannerParser::elementContent() {
  ElementContentContext *_localctx = _tracker.createInstance<ElementContentContext>(_ctx, getState());
  enterRule(_localctx, 12, ScannerParser::RuleElementContent);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(66);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(62);
      chtlAttribute();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(63);
      chtlElement();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(64);
      textContent();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(65);
      match(ScannerParser::ANY_CONTENT);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ChtlAttributeContext ------------------------------------------------------------------

ScannerParser::ChtlAttributeContext::ChtlAttributeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ScannerParser::ChtlAttributeContext::IDENTIFIER() {
  return getToken(ScannerParser::IDENTIFIER, 0);
}

tree::TerminalNode* ScannerParser::ChtlAttributeContext::COLON_OR_EQUAL() {
  return getToken(ScannerParser::COLON_OR_EQUAL, 0);
}

tree::TerminalNode* ScannerParser::ChtlAttributeContext::ATTR_VALUE() {
  return getToken(ScannerParser::ATTR_VALUE, 0);
}


size_t ScannerParser::ChtlAttributeContext::getRuleIndex() const {
  return ScannerParser::RuleChtlAttribute;
}

void ScannerParser::ChtlAttributeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ScannerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterChtlAttribute(this);
}

void ScannerParser::ChtlAttributeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ScannerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitChtlAttribute(this);
}

ScannerParser::ChtlAttributeContext* ScannerParser::chtlAttribute() {
  ChtlAttributeContext *_localctx = _tracker.createInstance<ChtlAttributeContext>(_ctx, getState());
  enterRule(_localctx, 14, ScannerParser::RuleChtlAttribute);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(68);
    match(ScannerParser::IDENTIFIER);
    setState(69);
    match(ScannerParser::COLON_OR_EQUAL);
    setState(70);
    match(ScannerParser::ATTR_VALUE);
    setState(71);
    match(ScannerParser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ChtlDeclarationContext ------------------------------------------------------------------

ScannerParser::ChtlDeclarationContext::ChtlDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ScannerParser::ChtlDeclarationContext::TEMPLATE_START() {
  return getToken(ScannerParser::TEMPLATE_START, 0);
}

std::vector<tree::TerminalNode *> ScannerParser::ChtlDeclarationContext::ANY_CONTENT() {
  return getTokens(ScannerParser::ANY_CONTENT);
}

tree::TerminalNode* ScannerParser::ChtlDeclarationContext::ANY_CONTENT(size_t i) {
  return getToken(ScannerParser::ANY_CONTENT, i);
}

tree::TerminalNode* ScannerParser::ChtlDeclarationContext::CUSTOM_START() {
  return getToken(ScannerParser::CUSTOM_START, 0);
}

tree::TerminalNode* ScannerParser::ChtlDeclarationContext::CONFIG_START() {
  return getToken(ScannerParser::CONFIG_START, 0);
}

tree::TerminalNode* ScannerParser::ChtlDeclarationContext::NAMESPACE_START() {
  return getToken(ScannerParser::NAMESPACE_START, 0);
}


size_t ScannerParser::ChtlDeclarationContext::getRuleIndex() const {
  return ScannerParser::RuleChtlDeclaration;
}

void ScannerParser::ChtlDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ScannerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterChtlDeclaration(this);
}

void ScannerParser::ChtlDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ScannerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitChtlDeclaration(this);
}

ScannerParser::ChtlDeclarationContext* ScannerParser::chtlDeclaration() {
  ChtlDeclarationContext *_localctx = _tracker.createInstance<ChtlDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 16, ScannerParser::RuleChtlDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(105);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ScannerParser::TEMPLATE_START: {
        enterOuterAlt(_localctx, 1);
        setState(73);
        match(ScannerParser::TEMPLATE_START);
        setState(77);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == ScannerParser::ANY_CONTENT) {
          setState(74);
          match(ScannerParser::ANY_CONTENT);
          setState(79);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(80);
        match(ScannerParser::T__1);
        break;
      }

      case ScannerParser::CUSTOM_START: {
        enterOuterAlt(_localctx, 2);
        setState(81);
        match(ScannerParser::CUSTOM_START);
        setState(85);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == ScannerParser::ANY_CONTENT) {
          setState(82);
          match(ScannerParser::ANY_CONTENT);
          setState(87);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(88);
        match(ScannerParser::T__1);
        break;
      }

      case ScannerParser::CONFIG_START: {
        enterOuterAlt(_localctx, 3);
        setState(89);
        match(ScannerParser::CONFIG_START);
        setState(93);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == ScannerParser::ANY_CONTENT) {
          setState(90);
          match(ScannerParser::ANY_CONTENT);
          setState(95);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(96);
        match(ScannerParser::T__1);
        break;
      }

      case ScannerParser::NAMESPACE_START: {
        enterOuterAlt(_localctx, 4);
        setState(97);
        match(ScannerParser::NAMESPACE_START);
        setState(101);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while (_la == ScannerParser::ANY_CONTENT) {
          setState(98);
          match(ScannerParser::ANY_CONTENT);
          setState(103);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(104);
        match(ScannerParser::T__1);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ChtlStatementContext ------------------------------------------------------------------

ScannerParser::ChtlStatementContext::ChtlStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ScannerParser::ChtlStatementContext::IMPORT_START() {
  return getToken(ScannerParser::IMPORT_START, 0);
}

std::vector<tree::TerminalNode *> ScannerParser::ChtlStatementContext::ANY_CONTENT() {
  return getTokens(ScannerParser::ANY_CONTENT);
}

tree::TerminalNode* ScannerParser::ChtlStatementContext::ANY_CONTENT(size_t i) {
  return getToken(ScannerParser::ANY_CONTENT, i);
}

tree::TerminalNode* ScannerParser::ChtlStatementContext::ORIGIN_START() {
  return getToken(ScannerParser::ORIGIN_START, 0);
}


size_t ScannerParser::ChtlStatementContext::getRuleIndex() const {
  return ScannerParser::RuleChtlStatement;
}

void ScannerParser::ChtlStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ScannerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterChtlStatement(this);
}

void ScannerParser::ChtlStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ScannerListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitChtlStatement(this);
}

ScannerParser::ChtlStatementContext* ScannerParser::chtlStatement() {
  ChtlStatementContext *_localctx = _tracker.createInstance<ChtlStatementContext>(_ctx, getState());
  enterRule(_localctx, 18, ScannerParser::RuleChtlStatement);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    setState(125);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ScannerParser::IMPORT_START: {
        enterOuterAlt(_localctx, 1);
        setState(107);
        match(ScannerParser::IMPORT_START);
        setState(111);
        _errHandler->sync(this);
        alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx);
        while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
          if (alt == 1) {
            setState(108);
            match(ScannerParser::ANY_CONTENT); 
          }
          setState(113);
          _errHandler->sync(this);
          alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 11, _ctx);
        }
        setState(115);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == ScannerParser::T__2) {
          setState(114);
          match(ScannerParser::T__2);
        }
        break;
      }
